Implementacia metody hladaj v MYSQL triedach, Uprava ZobrazFormov

--- a/src/main/java/sk/upjs/ics/traveltracker_paz1c/ZobrazitPamiatkaForm.form
+++ b/src/main/java/sk/upjs/ics/traveltracker_paz1c/ZobrazitPamiatkaForm.form
@@ -24,23 +24,121 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="149" max="-2" attributes="0"/>
-              <Component id="okButton" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
-              <Component id="upravitButton" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="108" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="1" attributes="0">
+                  <Group type="102" alignment="1" attributes="0">
+                      <Group type="103" groupAlignment="1" attributes="0">
+                          <Group type="102" attributes="0">
+                              <Component id="pamiatkaLabel" pref="115" max="32767" attributes="0"/>
+                              <EmptySpace min="-2" pref="70" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="1" attributes="0">
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="KrajinaLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="MestoLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                              </Group>
+                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                          </Group>
+                      </Group>
+                      <EmptySpace max="32767" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <Group type="103" groupAlignment="1" attributes="0">
+                          <Component id="ZobrazPamiatkaLabel" min="-2" max="-2" attributes="0"/>
+                          <Group type="102" attributes="0">
+                              <Component id="datumLabel" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="41" max="-2" attributes="0"/>
+                              <Component id="ZobrazDatumlabel" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <Component id="ZobrazMestoLabel" alignment="1" min="-2" max="-2" attributes="0"/>
+                          <Component id="ZobrazKrajinaLabel" alignment="1" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace pref="49" max="32767" attributes="0"/>
+                  </Group>
+              </Group>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" attributes="0">
+                      <Component id="PoznámkyiLabel" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="52" max="-2" attributes="0"/>
+                      <Component id="ZobrazPoznámkyLabel" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                      <Group type="102" attributes="0">
+                          <Component id="HodnotenieLabel" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
+                          <Component id="ZobrazHodnotenieLabel" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <Group type="102" attributes="0">
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="hodinyLabel" min="-2" max="-2" attributes="0"/>
+                              <Component id="VstupneLabel" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="1" attributes="0">
+                              <Component id="ZobrazHodinyLabel" min="-2" max="-2" attributes="0"/>
+                              <Component id="ZobrazVstupneLabel" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                      </Group>
+                  </Group>
+              </Group>
+              <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
+          </Group>
+          <Group type="102" attributes="0">
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="NavštívenéCheckBox" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="-2" pref="135" max="-2" attributes="0"/>
+                      <Component id="okButton" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
+                      <Component id="upravitButton" min="-2" max="-2" attributes="0"/>
+                  </Group>
+              </Group>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
-              <EmptySpace pref="255" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="KrajinaLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="ZobrazKrajinaLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="hodinyLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="ZobrazHodinyLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="ZobrazMestoLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="MestoLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="VstupneLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="ZobrazVstupneLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="ZobrazPamiatkaLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="HodnotenieLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="ZobrazHodnotenieLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="pamiatkaLabel" alignment="3" min="-2" pref="23" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="datumLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="ZobrazDatumlabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="PoznámkyiLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="ZobrazPoznámkyLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
+              <Component id="NavštívenéCheckBox" min="-2" max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="okButton" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="upravitButton" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
+              <EmptySpace pref="42" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -61,6 +159,91 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="upravitButtonActionPerformed"/>
       </Events>
+    </Component>
+    <Component class="javax.swing.JLabel" name="MestoLabel">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Mesto:"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="ZobrazMestoLabel">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="nepozna&#x10d;en&#xe9;"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="KrajinaLabel">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Krajina:"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="ZobrazKrajinaLabel">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="nepozna&#x10d;en&#xe9;"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="pamiatkaLabel">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Pamiatka:"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="ZobrazPamiatkaLabel">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="nepozna&#x10d;en&#xe9;"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="datumLabel">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="D&#xe1;tum:"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="ZobrazDatumlabel">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="nepozna&#x10d;en&#xe9;"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="hodinyLabel">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Otv&#xe1;racie hodiny:"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="ZobrazHodinyLabel">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="nepozna&#x10d;en&#xe9;"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="VstupneLabel">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Vstupn&#xe9;:"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="ZobrazVstupneLabel">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="nepozna&#x10d;en&#xe9;"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="HodnotenieLabel">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Hodnotenie:"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="ZobrazHodnotenieLabel">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="nepozna&#x10d;en&#xe9;"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="Pozn&#xe1;mkyiLabel">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Pozn&#xe1;mky:"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="ZobrazPozn&#xe1;mkyLabel">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="nepozna&#x10d;en&#xe9;"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JCheckBox" name="Nav&#x161;t&#xed;ven&#xe9;CheckBox">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Nav&#x161;t&#xed;ven&#xe9;"/>
+      </Properties>
     </Component>
   </SubComponents>
 </Form>
